# Eachine-E58-CFW

./: .gitmodules  README.md
CFW/: CMakeLists.txt  main.c  pan159.ld  startup.c
CFW/drone_rs/: Cargo.toml  bindings.h  build.rs
CFW/drone_rs/.cargo/: config
CFW/drone_rs/src/: lib.rs
Docs/: Info.md  PinMapping.md  notes.txt
